--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -205,7 +205,7 @@
 
 				& > .sub-menu {
                     visibility: visible;
-					opacity: 1;
+					opacity: .9;
                     transform: translateY(8px);
                     transition: all 0.25s ease-in-out;
 				}
@@ -323,10 +323,11 @@
                     
                     // Menu-itemin primery color on transparent header
                     & > a {
-                        color: $primary-color;
+                        color: $white;
+                        text-shadow: 1px 1px 3px rgba(100,37,129,0.3);
 
                         span::after {
-                            background-color: $white;
+                            background-color: $primary-color;
                         }
                     }
 
@@ -334,15 +335,15 @@
 
                         // Give the chevron-icon the primery color as the rest of the menu on transpatent header
                         svg {
-                            stroke: $primary-color; // color hover effect on the icon
+                            stroke: $white; // color hover effect on the icon
                             @include transition;
                         }
                     }
     
                     &:hover > a,
                     &:hover svg {
-                        color: $white;
-                        stroke: $white;
+                        color: $primary-color;
+                        stroke: $primary-color;
                         @include transition;
                     }
                 }
@@ -355,7 +356,7 @@
                         .sub-menu {
 
                             svg {
-                                stroke: $primary-color; // color hover effect on the icon
+                                stroke: $white; // color hover effect on the icon
                             }
                         }
 
@@ -551,7 +552,7 @@
 		position: absolute;
 		height: 3px;
 		width: 100%;
-		background: $primary-color;
+		background: $white;
 		border-radius: 4px;
 		opacity: 1;
 		right: 0;
